--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "A texttospeech NativeScript plugin for Android and iOS",
   "main": "texttospeech.js",
+  "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
       "ios": "1.1.2",
@@ -14,9 +15,17 @@
     "url": "https://github.com/anarchicknight/nativescript-texttospeech.git"
   },
   "keywords": [
-    "NativeScript"
+    "NativeScript",
+    "Text To Speech"
   ],
   "author": "Anarchic Knight <anarchicknight@gmail.com> (http://www.anarchicknight.co.uk)",
+  "contributors": [
+    {
+      "name": "Brad Martin",
+      "email": "bradwaynemartin@gmail.com",
+      "url": "https://github.com/BradMartin"
+    }
+  ],
   "license": {
     "type": "MIT",
     "url": "https://github.com/anarchicknight/nativescript-texttospeech/blob/master/LICENSE"
