rewrite TS :bomb:

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-.DS_Store
-demo/
-npm-debug.log
+*.js
+*.js.map
+*.log
+*.d.ts
+!index.d.ts
+demo/lib
+demo/app/app_resources
+demo/app/*.js
+demo/*.d.ts
+demo/platforms
+demo/node_modules
+demo/.vscode
+node_modules
+.vscode/
+*.DS_Store
