--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nativescript-texttospeech",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A texttospeech NativeScript plugin for Android and iOS",
-  "main": "texttospeech.js",
+  "main": "texttospeech",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
