Modified 'speak()' to return a Promise

--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
       "name": "Brad Martin",
       "email": "bradwaynemartin@gmail.com",
       "url": "https://github.com/BradMartin"
+    },
+    {
+      "name": "Sven Ziegler",
+      "email": "info@sven-ziegler.com",
+      "url": "https://github.com/svzi"
     }
   ],
   "license": {
