--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,36 @@
-*.js
-*.js.map
-*.log
-*.d.ts
-!index.d.ts
-demo/lib
-demo/app/*.js
-demo/*.d.ts
-demo/hooks
-demo/platforms
-demo/node_modules
-demo/.vscode
-node_modules
+.idea/
 .vscode/
-*.DS_Store
+.tscache/
+/demo/node_modules/
+/demo/platforms/
+/demo/app/temp/
+/demo/app/assets/
+/demo-ng/node_modules/
+/demo-ng/platforms/
+/demo-ng/app/temp/
+/demo-ng/app/assets/
+node_modules/
+.settings/
+
+.DS_Store
+*.js.map
+*.tar
+*.tgz
+*.gz
+*.zip
+*.js
+*.log
+nativescript-lottie.*.d.ts
+!src/scripts/*.js
+!demo/webpack.config.js
+!demo-ng/webpack.config.js
+!demo-vue/webpack.config.js
+
+!demo/karma.conf.js
+!demo-ng/karma.conf.js
+
+!demo/app/tests/tests.js
+!demo-ng/app/tests/tests.js
+
+## Vue demo
+!demo-vue/**/*.js
