--- a/demo/package.json
+++ b/demo/package.json
@@ -6,20 +6,28 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-android": {
-      "version": "3.3.1"
+      "version": "5.2.1"
     }
   },
   "dependencies": {
-    "nativescript-texttospeech": "file:..",
-    "tns-core-modules": "^3.3.0"
+    "nativescript-texttospeech": "file:../src",
+    "nativescript-theme-core": "~1.0.4",
+    "nativescript-unit-test-runner": "^0.5.0",
+    "tns-core-modules": "^5.2.2"
   },
   "devDependencies": {
-    "babel-traverse": "6.15.0",
-    "babel-types": "6.15.0",
-    "babylon": "6.9.1",
-    "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.5.1",
-    "tns-platform-declarations": "^3.3.0",
-    "typescript": "^2.5.1"
+    "jasmine-core": "3.3.0",
+    "karma": "4.0.1",
+    "karma-jasmine": "1.1.2",
+    "karma-nativescript-launcher": "0.4.0",
+    "nativescript-dev-typescript": "~0.8.0",
+    "nativescript-dev-webpack": "^0.20.2",
+    "tns-platform-declarations": "^5.2.2",
+    "tslint": "~5.13.1",
+    "typescript": "~3.1.6"
+  },
+  "scripts": {
+    "build.plugin": "cd ../src && npm run build",
+    "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**' --exclude '**/platforms/**'"
   }
 }
