--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -2,9 +2,14 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
+        "skipLibCheck": true,
+        "noImplicitAny": false,
+        "removeComments": true,
+        "preserveConstEnums": true,
+        "declaration": false,
+        "noLib": false,
+        "noEmitHelpers": true,
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "noEmitOnError": false,
         "lib": [
             "es6",
             "dom"
@@ -14,6 +19,9 @@
             "*": [
                 "./node_modules/tns-core-modules/*",
                 "./node_modules/*"
+            ],
+            "~/*": [
+                "app/*"
             ]
         }
     },
