--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ branches:
 
 stages:
   - lint
-  - build core
-  - webpack core
-  - tests
+  - builds
 
 android:
   components:
@@ -17,12 +15,12 @@ android:
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-21
 before_script:
-  - "sudo pip install --upgrade pip"
-  - "sudo pip install six"
+  - 'sudo pip install --upgrade pip'
+  - 'sudo pip install six'
 install:
-  - "echo no | npm install -g nativescript"
-  - "tns usage-reporting disable"
-  - "tns error-reporting disable"
+  - 'echo no | npm install -g nativescript'
+  - 'tns usage-reporting disable'
+  - 'tns error-reporting disable'
 
 matrix:
   include:
@@ -30,86 +28,90 @@ matrix:
     - stage: lint
       language: node_js
       os: linux
-      node_js: "8"
+      node_js: '8'
       script:
-        - "cd src && npm run ci.tslint"
-        - "cd ../demo && npm run ci.tslint"
+        - 'cd src && npm run ci.tslint'
+        - 'cd ../demo && npm run ci.tslint'
       # Build Core App
-    - stage: build core
+    - stage: builds
       ## Android Core Build
       env:
         - OS="Android28"
+        - Type="Build_Core"
       language: android
-      before_install: "nvm install 8.11.4"
+      before_install: 'nvm install 8.11.4'
       jdk: oraclejdk8
       os: linux
       script:
-        - "cd src && npm i && npm run tsc"
-        - "cd ../demo && tns build android"
+        - 'cd src && npm i && npm run tsc'
+        - 'cd ../demo && tns build android'
     ## iOS Core Build
     - env:
         - OS="iOS12.0"
         - Xcode="10.0"
+        - Type="Build_Core"
       language: node_js
       os: osx
       jdk: oraclejdk8
-      node_js: "8"
+      node_js: '8'
       osx_image: xcode10
       script:
-        - "cd src && npm i && npm run tsc"
-        - "cd ../demo && tns build ios"
+        - 'cd src && npm i && npm run tsc'
+        - 'cd ../demo && tns build ios'
       # Webpack Core App
-    - stage: webpack core
       ## Android Webpack
-      env:
+    - env:
         - OS="Android28"
-      before_install: "nvm install 8.11.4"
+        - Type="Core_Webpack"
+      before_install: 'nvm install 8.11.4'
       jdk: oraclejdk8
       language: android
       os: linux
       script:
-        - "cd demo && npm run build.plugin"
-        - "npm i && tns build android --bundle --env.uglify"
+        - 'cd demo && npm run build.plugin'
+        - 'npm i && tns build android --bundle --env.uglify'
     ## iOS Webpack
     - env:
         - OS="iOS12.0"
         - Xcode="10.0"
+        - Type="Core_Webpack"
       jdk: oraclejdk8
       language: node_js
-      node_js: "8"
+      node_js: '8'
       os: osx
       osx_image: xcode10
       script:
-        - "cd demo && npm run build.plugin"
-        - "npm i && tns build ios --bundle --env.uglify"
+        - 'cd demo && npm run build.plugin'
+        - 'npm i && tns build ios --bundle --env.uglify'
     # Tests
-    - stage: tests
-      ## Android Tests
-      env:
+    ## Android Tests
+    - env:
         - OS="Android28"
+        - Type="Tests"
       before_install:
-        - "nvm install 8"
+        - 'nvm install 8'
       before_script:
-        - "echo no | android create avd --force -n test -t android-21 -b armeabi-v7a"
-        - "emulator -avd test -no-audio -no-window &"
-        - "android-wait-for-emulator"
+        - 'echo no | android create avd --force -n test -t android-21 -b armeabi-v7a'
+        - 'emulator -avd test -no-audio -no-window &'
+        - 'android-wait-for-emulator'
       dist: precise
       jdk: oraclejdk8
       language: android
       os: linux
       script:
-        - "cd src && npm i && npm run tsc"
-        - "npm run tslint && cd ../demo && tns build android"
-        - "travis_wait travis_retry tns test android --justlaunch"
+        - 'cd src && npm i && npm run tsc'
+        - 'npm run tslint && cd ../demo && tns build android'
+        - 'travis_wait travis_retry tns test android --justlaunch'
     ## iOS Tests
     - env:
-        - OS="iOS12.0"
+        - OS="iOS12.1"
+        - Type="Tests"
       jdk: oraclejdk8
       language: node_js
-      node_js: "8"
+      node_js: '8'
       os: osx
-      osx_image: xcode10
+      osx_image: xcode10.1
       script:
-        - "cd src && npm i && npm run tsc"
-        - "npm run tslint && cd ../demo && tns build ios"
-        - "travis_wait travis_retry tns test ios --justlaunch"
+        - 'cd src && npm i && npm run tsc'
+        - 'npm run tslint && cd ../demo && tns build ios'
+        - 'travis_wait travis_retry tns test ios --justlaunch'
