--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ android:
     - tools
     - platform-tools
     - build-tools-28.0.3
+    - android-21
     - android-28
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-21
@@ -87,10 +88,11 @@ matrix:
     ## Android Tests
     - env:
         - OS="Android28"
-        - Type="Tests"
+        - Type="Android_Test"
       before_install:
         - 'nvm install 8'
       before_script:
+        - android list targets
         - 'echo no | android create avd --force -n test -t android-21 -b armeabi-v7a'
         - 'emulator -avd test -no-audio -no-window &'
         - 'android-wait-for-emulator'
@@ -101,17 +103,14 @@ matrix:
       script:
         - 'cd src && npm i && npm run tsc'
         - 'npm run tslint && cd ../demo && tns build android'
-        - 'travis_wait travis_retry tns test android --justlaunch'
+        - travis_wait travis_retry npm run test.android
     ## iOS Tests
     - env:
         - OS="iOS12.1"
-        - Type="Tests"
+        - Type="iOS_Test"
       jdk: oraclejdk8
       language: node_js
       node_js: '8'
       os: osx
       osx_image: xcode10.1
-      script:
-        - 'cd src && npm i && npm run tsc'
-        - 'npm run tslint && cd ../demo && tns build ios'
-        - 'travis_wait travis_retry tns test ios --justlaunch'
+      script: travis_wait travis_retry npm run test.ios
