--- a/src/package.json
+++ b/src/package.json
@@ -20,16 +20,13 @@
   "scripts": {
     "tsc": "tsc -skipLibCheck",
     "build": "npm i && tsc",
-    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
     "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\" --exclude \"*demo*/platforms/**\"",
-    "plugin.link": "npm link && cd ../demo && npm link nativescript-geolocation && cd ../src",
-    "plugin.tscwatch": "npm run tsc -- -w",
-    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
     "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
+    "demo.ios": "npm run setup && cd ../demo && tns run ios",
+    "demo.android": "npm run setup && cd ../demo && tns run android",
+    "setup": "npm i && tsc",
     "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" tns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" tns build ios && echo 'Now look for your library typings in demo/typings!'",
-    "precommit": "lint-staged"
+    "make-changelog": "cd ../ && github_changelog_generator -u nstudio -p nativescript-texttospeech"
   },
   "keywords": [
     "NativeScript",
@@ -75,23 +72,28 @@
   "homepage": "https://github.com/bradmartin/nativescript-texttospeech",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "tns-core-modules": "^5.2.2",
-    "tns-platform-declarations": "^5.2.2",
-    "lint-staged": "^8.1.5",
-    "husky": "^1.3.1",
-    "prettier": "~1.16.4",
-    "typescript": "~3.1.6",
-    "tslint": "5.13.1",
+    "tns-core-modules": "^6.4.2",
+    "tns-platform-declarations": "^6.4.2",
+    "lint-staged": "^10.0.8",
+    "husky": "^4.2.3",
+    "prettier": "~1.19.1",
+    "typescript": "~3.8.3",
+    "tslint": "6.1.0",
     "prompt": "^1.0.0",
-    "rimraf": "^2.6.3",
-    "semver": "^5.6.0"
+    "rimraf": "^3.0.2",
+    "semver": "^7.1.3"
   },
   "dependencies": {},
   "lint-staged": {
-    "*.{ts, js, json, scss, md, xml, html}": [
-      "tslint",
+    "**/*.{js, css, ts, json, scss, html, xml, md}": [
       "prettier --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run tslint"
+    }
   }
 }
