--- a/demo/package.json
+++ b/demo/package.json
@@ -3,31 +3,27 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
-  "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-ios": {
-      "version": "6.4.2"
-    }
-  },
   "dependencies": {
     "nativescript-texttospeech": "file:../src",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-unit-test-runner": "0.7.0",
-    "tns-core-modules": "~6.4.0"
+    "@nativescript/core": "^7.0.0"
   },
   "devDependencies": {
+    "@nativescript/android": "7.0.0",
+    "@nativescript/types": "^7.0.0",
+    "@nativescript/webpack": "^3.0.1",
     "jasmine-core": "3.3.0",
     "karma": "4.1.0",
     "karma-jasmine": "2.0.1",
     "karma-nativescript-launcher": "0.4.0",
-    "nativescript-dev-webpack": "~1.5.1",
-    "tns-platform-declarations": "^6.4.2",
-    "tslint": "~5.13.1",
-    "typescript": "^3.8.3",
-    "karma-webpack": "3.0.5"
+    "karma-webpack": "3.0.5",
+    "tslint": "~6.1.3",
+    "typescript": "^3.9.0"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
     "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**' --exclude '**/platforms/**'"
-  }
+  },
+  "main": "app.js"
 }
