--- a/src/package.json
+++ b/src/package.json
@@ -1,18 +1,9 @@
 {
   "name": "nativescript-texttospeech",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "description": "A text to speech NativeScript plugin for Android and iOS",
   "main": "texttospeech",
   "typings": "index.d.ts",
-  "nativescript": {
-    "platforms": {
-      "ios": "1.1.2",
-      "android": "1.1.0"
-    },
-    "tns-ios": {
-      "version": "2.3.0"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/bradmartin/nativescript-texttospeech.git"
@@ -36,35 +27,6 @@
     "JavaScript"
   ],
   "author": "Anarchic Knight <anarchicknight@gmail.com> (http://www.anarchicknight.co.uk)",
-  "contributors": [
-    {
-      "name": "Brad Martin",
-      "email": "bmartin@nstudio.io",
-      "url": "https://github.com/BradMartin"
-    },
-    {
-      "name": "Sven Ziegler",
-      "email": "info@sven-ziegler.com",
-      "url": "https://github.com/svzi"
-    },
-    {
-      "name": "Eddy Verbruggen",
-      "url": "https://github.com/EddyVerbruggen"
-    },
-    {
-      "name": "Gaper",
-      "url": "https://github.com/apiejh"
-    },
-    {
-      "name": "Josh Sommer",
-      "url": "https://github.com/TheOriginalJosh"
-    },
-    {
-      "name": "TJ VanToll",
-      "email": "tj.vantoll@gmail.com",
-      "url": "https://github.com/tjvantoll"
-    }
-  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bradmartin/nativescript-texttospeech/issues"
@@ -72,18 +34,15 @@
   "homepage": "https://github.com/bradmartin/nativescript-texttospeech",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "tns-core-modules": "^6.4.2",
-    "tns-platform-declarations": "^6.4.2",
-    "lint-staged": "^10.0.8",
-    "husky": "^4.2.3",
-    "prettier": "~1.19.1",
-    "typescript": "~3.8.3",
-    "tslint": "6.1.0",
-    "prompt": "^1.0.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
+    "prettier": "^2.1.1",
+    "@nativescript/core": "^7.0.0",
+    "@nativescript/types": "^7.0.0",
     "rimraf": "^3.0.2",
-    "semver": "^7.1.3"
+    "tslint": "~6.1.3",
+    "typescript": "~3.9.0"
   },
-  "dependencies": {},
   "lint-staged": {
     "**/*.{js, css, ts, json, scss, html, xml, md}": [
       "prettier --write",
