chore: move to community

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "singleQuote": true,
-  "semi": true
+    "printWidth": 200,
+    "semi": true,
+    "tabWidth": 4,
+    "singleQuote": true
 }
