--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,81 @@
-.idea/
-.vscode/
-.tscache/
-/demo/node_modules/
-/demo/platforms/
-/demo/app/temp/
-/demo/app/assets/
-/demo-ng/node_modules/
-/demo-ng/platforms/
-/demo-ng/app/temp/
-/demo-ng/app/assets/
-node_modules/
-.settings/
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
 
 .DS_Store
-*.js.map
-*.tar
-*.tgz
-*.gz
-*.zip
-*.js
+.AppleDouble
+.LSOverride
+.idea
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+bin
+obj
+build/
+.vs
+.tscache
+*.user
+!demo-vue/app/app.js
+*.map
+!gruntfile.js
+node_modules
+*.tmp.*
+demo*/platforms
+lib
+!webpack.*.js
+!build.esm.js
+report
 *.log
-nativescript-lottie.*.d.ts
-!src/scripts/*.js
-!demo/webpack.config.js
-!demo-ng/webpack.config.js
-!demo-vue/webpack.config.js
 
-!demo/karma.conf.js
-!demo-ng/karma.conf.js
+*.framework
+*.aar
 
-!demo/app/tests/tests.js
-!demo-ng/app/tests/tests.js
+Pods
+*.lock
+*.xcworkspace
+plugin/**/*.d.ts
+/plugin/README.md
+package-lock.json
+/.vscode
+/pnpm-lock.yaml
 
-## Vue demo
-!demo-vue/**/*.js
+.update_backup
+.migration_backup
+plugin/**/*js.map
+plugin/**/*js
+pnpm-lock.yaml
+hooks
