--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
             "@nativescript-community/ui-texttospeech/*": ["src/*"],
             "*": ["node_modules/*"]
         },
-        "plugins": [{ "transform": "./node_modules/@nativescript/webpack/transformers/ns-transform-native-classes", "type": "raw" }]
+        "plugins": [{ "transform": "@nativescript/webpack/dist/transformers/NativeClass", "type": "raw" }]
     },
     "include": ["src/**/*", "./references.d.ts"],
     "exclude": ["node_modules", "platforms", "src/angular/**/*"],
