--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,9 @@
 {
-  "packages": [
-    "plugin"
-  ],
-  "version": "3.1.1",
-  "command": {
-    "publish": {
-      "conventionalCommits": true
+    "packages": ["plugin"],
+    "version": "3.1.2",
+    "command": {
+        "publish": {
+            "conventionalCommits": true
+        }
     }
-  }
 }
